--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <li>turbo console log (ctr option l, option shift c, option shift u, option shirt d option=alt)</li>
         <li>indent rainbow</li>
         <li>code spell checker</li>
+        <li>git hub and git set up</li>
+
 
     </ul>
 
