additional items for github and git

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <li>turbo console log (ctr option l, option shift c, option shift u, option shirt d option=alt)</li>
         <li>indent rainbow</li>
         <li>code spell checker</li>
+        <li>git lens</li>
         <li>git hub and git set up</li>
+        <li>make .gitignore file with .vscode</li>
 
 
     </ul>
